plugin made compatible with java 1.7